dev/k8s/judge-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: judge-api
  name: judge-api
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - judge-api.testifysec.localhost
      secretName: judge-api-tls
  rules:
    - host: judge-api.testifysec.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: judge-api
                port:
                  name: http
